[ADD] dashboard endpoint
