# src/timekeeper-backend/docs/swagger.json
@@ -9,6 +9,46 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/dashboard": {
+            "get": {
+                "description": "Get all remotes or remotes by name",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "remote"
+                ],
+                "summary": "Get all remotes or remotes by name",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Remote Name",
+                        "name": "remoteName",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.RemoteResponse"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/get-remote": {
             "get": {
                 "description": "Get a remote by name and version",
@@ -42,13 +82,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/remote.RemoteResponse"
+                            "$ref": "#/definitions/models.RemoteResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/remote.ErrorResponse"
+                            "$ref": "#/definitions/models.ErrorResponse"
                         }
                     }
                 }
@@ -68,7 +108,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/health.SuccessResponse"
+                            "$ref": "#/definitions/models.SuccessResponse"
                         }
                     }
                 }
@@ -102,13 +142,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/remote.RemoteResponse"
+                            "$ref": "#/definitions/models.RemoteResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/remote.ErrorResponse"
+                            "$ref": "#/definitions/models.ErrorResponse"
                         }
                     }
                 }
@@ -116,18 +156,32 @@
         }
     },
     "definitions": {
-        "health.SuccessResponse": {
+        "models.ErrorResponse": {
             "type": "object",
             "properties": {
-                "status": {
+                "error": {
                     "type": "string"
                 }
             }
         },
-        "remote.ErrorResponse": {
+        "models.RemoteResponse": {
             "type": "object",
             "properties": {
-                "error": {
+                "remoteName": {
+                    "type": "string"
+                },
+                "remoteURL": {
+                    "type": "string"
+                },
+                "version": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.SuccessResponse": {
+            "type": "object",
+            "properties": {
+                "status": {
                     "type": "string"
                 }
             }
@@ -139,20 +193,6 @@
                     "type": "string"
                 },
                 "remoteName": {
-                    "type": "string"
-                },
-                "version": {
-                    "type": "string"
-                }
-            }
-        },
-        "remote.RemoteResponse": {
-            "type": "object",
-            "properties": {
-                "remoteName": {
-                    "type": "string"
-                },
-                "remoteURL": {
                     "type": "string"
                 },
                 "version": {
